attempt to fix whitespace around body

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -5,6 +5,5 @@
 
 :host {
   display: flex;
-  flex: 1;
   background: #363434;
 }
